feat(backend): applications and admin endpoints
